# poetry_reader

./: .gitignore  main.py  pyproject.toml  test-code.cloudbuild.yaml
app/: config.yaml  main.py
app/utils/: load_config.py
data/csvs/: 14.csv  Hello_world.csv  N.csv  PENSADOR.csv
data/txt/: Coração.txt  Ode ao Artista.txt  test.txt
src/: main.py
src/context/: csv_on_cloud.py
src/interfaces/: pipeline.py
src/strategies/: gcp.py
src/utils/: load_config.py
terraform/: main.tf  variables.tf
terraform/bigquery/: main.tf  variables.tf
terraform/cloud_storage/: main.tf  variables.tf
terraform/cloudbuild/: main.tf  variables.tf
terraform/iam/: main.tf  output.tf  variables.tf
tests/: test_load_config.py  test_main.py
